--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "0.57.3",
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
+    "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.1"
   },
   "devDependencies": {
