:rocket: Main Screen design
main screen #10

--- a/ios/OverwatchCardMaster/Info.plist
+++ b/ios/OverwatchCardMaster/Info.plist
@@ -70,6 +70,10 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>big_noodle_titling_oblique.ttf</string>
+		<string>big_noodle_titling.ttf</string>
+		<string>futura.otf</string>
+		<string>bignoodletoo_italic.woff</string>
 	</array>
 </dict>
 </plist>
