:rocket: Profil Overwatch done
overwatch profil #10

--- a/ios/OverwatchCardMaster/Info.plist
+++ b/ios/OverwatchCardMaster/Info.plist
@@ -74,6 +74,7 @@
 		<string>big_noodle_titling.ttf</string>
 		<string>futura.otf</string>
 		<string>bignoodletoo_italic.woff</string>
+		<string>futura.ttf</string>
 	</array>
 </dict>
 </plist>
