--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native-animatable": "^1.3.0",
     "react-native-elements": "^0.19.1",
     "react-native-restart": "0.0.7",
+    "react-native-sound-player": "^0.5.3",
     "react-native-storage": "^1.0.0-beta.0",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.18.1"
